custom-elements/custom-dialog/css/custom-dialog.css
:host {
    font-family: sans-serif;
}

* {
    box-sizing: border-box;
}

.overlay-panel {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    background-color: #424040;
    opacity: 0.8;
    width: 100%;
    height: 100%;
}

.overlay-panel.open {
    display: block;
    animation-name: showOverlay;
    animation-duration: 0.5s;
    animation-fill-mode: forwards;
}

.overlay-panel.close {
    display: block;
    animation-name: hideOverlay;
    animation-duration: 0.5s;
    animation-fill-mode: forwards;
}

.dialog-container {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.dialog-container.open {
    display: block;
    animation-name: openDialog;
    animation-duration: 0.5s;
    animation-fill-mode: forwards;
}

.dialog-container.close {
    display: block;
    animation-name: closeDialog;
    animation-duration: 0.5s;
    animation-fill-mode: forwards;
}

.dialog {
    position: absolute;
    top: 0;
    left: 10%;
    width: 80%;
    height: 100%;
    background-color: orange;
}

.dialog-content {
    margin: 30% 10%;
    /* overflow-y: scroll; */
    padding: 0 3rem;
    transform: translateY(-30%);
}

.dialog-close {
    margin: 20px 20px;
    float: right;
    font-size: 2rem;
    font-weight: 400;
    cursor: pointer;
}

@keyframes showOverlay {
    from {
        opacity: 0;
    } to {
        opacity: 0.8;
    }
}

@keyframes hideOverlay {
    from {
        opacity: 0.8;
    } to {
        opacity: 0;
        visibility: hidden;
    }
}

@keyframes openDialog {
    from {
        transform: translateY(-100%);
    } to {
        transform: translateY(0);
    }
}

@keyframes closeDialog {
    from {
        transform: translateY(0);
    } to {
        transform: translateY(-100%);
    }
}

